Fix text alignment
Use leading-edge (`start`) alignment instead of `justify`.

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -3,6 +3,10 @@
 
 @import "modern-resume-theme";
 
+p, ul {
+  text-align: start;
+}
+
 h5 {
   font-size: 2em;
 }
